tests/negative/parser/array_idx.orng
fn main() -> Int {
    let x: [3]Int = (0, 0, 0)
    x[)
}